--- a/index.html.org
+++ b/index.html.org
@@ -55,7 +55,7 @@
         <span class="lni-menu"></span>
         <span class="lni-menu"></span>
       </button>
-      <a href="https://www.vivekamschoolcbse.edu.in" target="_blank class="navbar-brand"><img src="assets/img/vivekam6.png" width="200" height="50" align="right" alt=""></a>
+      <a href="https://www.vivekamschoolcbse.edu.in" target="_blank class="navbar-brand"><img src="assets/img/vivekam2.jpg" width="200" height="50" align="right" alt=""></a>
 
 
     
@@ -72,7 +72,7 @@
               MIRTHUN D
             </h1>
             <h3 class="subtitle">
-              <b>Grade 1  SR</b>
+              <b>Grade II APJ</b>
             </h3>
             <br><h5  id="txt" class="subtitle"><b> Time:</b>        
               <h5 id="demo" class="subtitle"><b>Date:</b></h5>
@@ -99,7 +99,7 @@
               <div class="icon">
                 <i class="lni-book"></i>
               </div>
-              <h3><a href="https://meet.google.com/ece-sbfy-bbv?pli=1&authuser=0" target="_blank">English</a><p>ece-sbfy-bbv</p></h3>
+              <h3><a href="https://meet.google.com/iuf-ftrz-wfh?pli=1&authuser=0" target="_blank">English</a><p>iuf-ftrz-wfh</p></h3>
             </div>
           </div> 
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="300">
@@ -107,7 +107,7 @@
               <div class="icon">
                 <i class="lni-bullhorn"></i>
               </div>
-              <h3><a href="https://meet.google.com/epe-wbgw-fxd?pli=1&authuser=0" target="_blank">தமிழ்</a><p>epe-wbgw-fxd</p></h3>
+              <h3><a href="https://meet.google.com/ron-ivbo-gtc?pli=1&authuser=0" target="_blank">தமிழ் / Test</a><p>ron-ivbo-gtc</p></h3>
             </div>
           </div> 
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -123,7 +123,7 @@
               <div class="icon">
                 <i class="lni-bulb"></i>
               </div>
-              <h3><a href=https://meet.google.com/edd-imzr-qxq?pli=1&authuser=0" target="_blank">Maths</a><p>edd-imzr-qxq</p></h3>
+              <h3><a href=https://meet.google.com/jwc-amwx-wix?pli=1&authuser=0" target="_blank">Maths</a><p>jwc-amwx-wix</p></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -131,7 +131,7 @@
               <div class="icon">
                 <i class="lni-brush"></i>
               </div>
-              <h3><a href="https://meet.google.com/cms-uiau-uye?pli=1&authuser=0" target="_blank">Art</a><p>cms-uiau-uye</p></h3>
+              <h3><a href="https://meet.google.com/pte-gxhc-nwf?pli=1&authuser=0" target="_blank">Games</a><p>pte-gxhc-nwf</p></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -148,7 +148,7 @@
     <br><h2 class="section-title">
       Time Table
     </h2>
-    <br><img src="assets/img/time_table.jpg"  alt="assets/img/time_table-bu.jpg" class="center">
+    <br><img src="https://res.cloudinary.com/pidile/image/upload/v1623662723/time_table.jpg"  alt="Not Found" onerror=this.src="assets/img/vivekam2.jpg" class="center">
 
 
      
@@ -159,13 +159,13 @@
         <div class="row">
           <div class="col-md-12">
             <div class="footer-text text-center">
-              <p>Copyright © 2020 - 2021 | D S M </p>
               <a href="index.html"><img src="assets/img/DM.JPG" class="img-round" width="50" height="50" alt=""></a>
-              
+              <p>Copyright © 2020 - 2021 | D S M </p>
+              <p style="color:rgb(24, 24, 24);">V 2.6</p>
             </div>
           </div>
         </div>
-      </div> V 1.5
+      </div> 
     </footer>
     <!-- Footer Section End -->
 
