--- a/index.html.org
+++ b/index.html.org
@@ -99,7 +99,7 @@
               <div class="icon">
                 <i class="lni-book"></i>
               </div>
-              <h3><a href="https://meet.google.com/iuf-ftrz-wfh?pli=1&authuser=0" target="_blank">English</a><p>iuf-ftrz-wfh</p></h3>
+              <h3><a href="https://meet.google.com/fgb-axtk-ibn?pli=1&authuser=0" target="_blank">हिन्दी</a><p>fgb-axtk-ibn</p></h3>
             </div>
           </div> 
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="300">
@@ -107,7 +107,7 @@
               <div class="icon">
                 <i class="lni-bullhorn"></i>
               </div>
-              <h3><a href="https://meet.google.com/ron-ivbo-gtc?pli=1&authuser=0" target="_blank">தமிழ் / Test</a><p>ron-ivbo-gtc</p></h3>
+              <h3><a href="https://meet.google.com/iuf-ftrz-wfh?pli=1&authuser=0" target="_blank">English</a><p>iuf-ftrz-wfh</p></h3>
             </div>
           </div> 
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -115,7 +115,7 @@
               <div class="icon">
                 <i class="lni-bullhorn"></i>
               </div>
-              <h3><a href="https://meet.google.com/fgb-axtk-ibn?pli=1&authuser=0" target="_blank">हिन्दी</a><p>fgb-axtk-ibn</p></h3>
+              <h3><a href="https://meet.google.com/ron-ivbo-gtc?pli=1&authuser=0" target="_blank">தமிழ் / Test</a><p>ron-ivbo-gtc</p></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -123,7 +123,7 @@
               <div class="icon">
                 <i class="lni-bulb"></i>
               </div>
-              <h3><a href=https://meet.google.com/jwc-amwx-wix?pli=1&authuser=0" target="_blank">Maths</a><p>jwc-amwx-wix</p></h3>
+              <h3><a href="https://meet.google.com/pte-gxhc-nwf?pli=1&authuser=0" target="_blank">Games</a><p>pte-gxhc-nwf</p></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -131,7 +131,7 @@
               <div class="icon">
                 <i class="lni-brush"></i>
               </div>
-              <h3><a href="https://meet.google.com/pte-gxhc-nwf?pli=1&authuser=0" target="_blank">Games</a><p>pte-gxhc-nwf</p></h3>
+              <h3><a href=https://meet.google.com/jwc-amwx-wix?pli=1&authuser=0" target="_blank">Maths</a><p>jwc-amwx-wix</p></h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12 fadeInUp" data-animation="fadeInUp" data-delay="600">
@@ -148,7 +148,7 @@
     <br><h2 class="section-title">
       Time Table
     </h2>
-    <br><img src="https://res.cloudinary.com/pidile/image/upload/v1623662723/time_table.jpg"  alt="Not Found" onerror=this.src="assets/img/vivekam2.jpg" class="center">
+    <br><img src="assets/img/time_table.jpg"  alt="Not Found" onerror=this.src="https://res.cloudinary.com/pidile/image/upload/v1623662723/time_table.jpg" class="center">
 
 
      
@@ -161,7 +161,7 @@
             <div class="footer-text text-center">
               <a href="index.html"><img src="assets/img/DM.JPG" class="img-round" width="50" height="50" alt=""></a>
               <p>Copyright © 2020 - 2021 | D S M </p>
-              <p style="color:rgb(24, 24, 24);">V 2.6</p>
+              <p style="color:rgb(24, 24, 24);">V 2.7</p>
             </div>
           </div>
         </div>
